# KnowledgeBase

./: .env.example  .gitignore  AGENTS.md  AGENT_MESSAGES.md  CLAUDE.md  COLLABORATION.md  COLLAB_TASKS.md  DELIVERABLES.md  README.md  TEAM.md  pyproject.toml
.dev/: 2026-04-20-agent-knowledge-backend-redesign.md  2026-04-21-v1.1-database-complete-proposal.md  2026-04-21-v1.1-database-final-proposal.md  2026-04-21-v1.1-database-initial-design.md  2026-04-21-v1.1-mining-evolution-plan.md  2026-04-21-v1.1-serving-rewrite-plan.md  2026-04-21-v1.1-simplified-database-design.md  2026-04-21-v1.1-three-agent-context-pack.md  2026-04-21-versioning-simplification-proposal.md  codex-mining-feedback-draft.md
agent_serving/: QUICKSTART.md  README.md  architecture.html
agent_serving/scripts/: run_serving.py
agent_serving/serving/: main.py
agent_serving/tests/: conftest.py  test_api_integration.py  test_assembler.py  test_asset_repo.py  test_health.py  test_install_smoke.py  test_mining_contract.py  test_models.py  test_normalizer.py  test_pipeline.py  test_schema_adapter.py
cloud_core_coldstart_md/: llm_prompt_template.md  productdoc_to_md.py  sample_corpus_description.md  sample_corpus_list.csv
data/3gpp_docx_extraction/: README.md
data/asset_contracts/: README.md
databases/: README.md
docs/analysis/: 2026-04-16-m1-knowledge-mining-plan-codex-review.md  2026-04-20-agent-llm-module-requirements-codex-analysis.md  (+4 more)
knowledge_mining/: README.md  architecture.html
llm_service/: README.md  architecture.html  client.py  config.py  main.py  models.py
(+139 files in other folders)
